--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,22 +24,18 @@
     <body>
 
         <nav class="navbar navbar-expand-md navbar-light bg-light border">
-            <a class="navbar-brand" href="/"><span class="green">Walky: Pet Care 1 </span><span class="red">P</span><span class="yellow">a</span><span class="blue">w</span> <span class="green">at a Time</span></a>
+            <a class="navbar-brand" href="http://ide50-jortiz1.cs50.io:8080/login"><span class="green">Walky: Pet Care 1 </span><span class="red">P</span><span class="yellow">a</span><span class="blue">w</span> <span class="green">at a Time</span></a>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
                 {% if session.user_id %}
-                    <ul class="navbar-nav mr-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/friends">Friends</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/pointsandrewards">Points and Rewards</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/history"></a></li>
-                    </ul>
                     <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                     </ul>
+
                 {% else %}
+
                     <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
                         <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
@@ -47,6 +43,7 @@
                 {% endif %}
             </div>
         </nav>
+
 
         {% if get_flashed_messages() %}
             <header>
