--- a/templates/deletepet.html
+++ b/templates/deletepet.html
@@ -7,7 +7,7 @@
 {% block main %}
 <form action="/deletepet" method="post">
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="Pet_Identifier" placeholder="Special Nickname for Pet" type="text" required/>
+            <input autocomplete="off" autofocus class="form-control" name="Name" placeholder="Pet's Name" type="text" required/>
         </div>
         <button class="btn btn-primary" type="submit">Delete Pet</button>
     </form>
